# optparse

./: Cargo.toml  README.md
doc/: README.html  search-index.js  settings.html  source-files.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/optparse/: all.html  index.html  macro.parse.html  macro.register.html  sidebar-items.js  struct.Func.html  struct.Parser.html
doc/src/optparse/: optparse.rs.html
src/: optparse.rs
