[package]
name = "optparse"
version = "0.1.4"
authors = ["rootlou <louiskaran@gmail.com>"]
edition = "2018"
crate-type = ["lib"]
description = "Simplified parsing of std::env and input arguments from the commandline"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/rootlou/optparse"
keywords = ["cli", "parse", "commands"]

[lib]
name = "optparse"
path = "src/optparse.rs"

[dependencies]
